<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.entry.EntryFragment">

    <data>

        <variable
            name="contact"
            type="com.gaugustini.carddo.model.Contact" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_normal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_label"
                style="@style/Widget.Carddo.TextInputLayout.OutlinedBox"
                android:hint="@string/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    contact="@{contact.name}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/job_label"
                style="@style/Widget.Carddo.TextInputLayout.OutlinedBox"
                android:hint="@string/job"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/job"
                    contact="@{contact.job}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_label"
                style="@style/Widget.Carddo.TextInputLayout.OutlinedBox"
                android:hint="@string/phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/job_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone"
                    contact="@{contact.phone}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="phone"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mail_label"
                style="@style/Widget.Carddo.TextInputLayout.OutlinedBox"
                android:hint="@string/mail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mail"
                    contact="@{contact.mail}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/company_label"
                style="@style/Widget.Carddo.TextInputLayout.OutlinedBox"
                android:hint="@string/company"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mail_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/company"
                    contact="@{contact.company}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/site_label"
                style="@style/Widget.Carddo.TextInputLayout.OutlinedBox"
                android:hint="@string/site"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/company_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/site"
                    contact="@{contact.site}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textWebEditText"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/color_label"
                style="@style/Widget.Carddo.TextInputLayout.OutlinedBox"
                android:hint="@string/color"
                app:boxBackgroundColor="@{contact.color}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/site_label"
                app:startIconDrawable="@drawable/ic_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/color"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusable="false"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/color_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
